@@ -1,2 +1,2 @@
 #include "../config.h"
-#define BUILDTAG PACKAGE_NAME, PACKAGE_VERSION " / 4393", "2013-10-22 13:45:24 UTC", "Linux 2.6.32-52-generic i686", "'VALUE_CHECK_WANTED=yes' 'DYNAMIC_LOG_WANTED=yes' 'ASSERT_LEVEL_WANTED=2' 'PRINT_SEMA_WANTED=yes'"
+#define BUILDTAG PACKAGE_NAME, PACKAGE_VERSION " / 4399", "2013-10-23 16:02:36 UTC", "Linux 2.6.32-52-generic i686", ""
